--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Blogpoint's backend",
   "main": "app.js",
+  "type": "module",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
